feat: 실행 리스크 한도와 handoff 기준 반영
주문 생성, 재시도, 체결 후 검사 단계에 실행 리스크 한도 4종을 연결했다.
RISK_LIMIT_BREACH 모델과 관련 설정, 저장소 조회, 테스트를 추가했다.
다음 세션 시작점이 minimal-ops-alerts가 되도록 handoff 문서를 최신 master 기준으로 갱신했다.